  * Fixed a bug in set_defaults occuring on reading untyped value from the
    configuration file
  * Match ec2 vocabulary by adding option name and clarifying help 
    (LP: #284765, LP: #285170, LP: #285165)
  * Added a check for xen hypervisor when ec2 is selected (LP: #285191)
  * Added checks for presence of bucket, access key and secret key for ec2 
    (LP: #284757)

  [Mathias Gug]
  * Fix --templates option.

 -- Nicolas Barcet <nicolas.barcet@ubuntu.com>  Thu, 17 Oct 2008 23:56:33 -0400

vm-builder (0.9-0ubuntu2) intrepid; urgency=low

  [ Nicolas Barcet ]
  * Added hint for more help (LP: #269323)
  * Added firstscripts plugin to fix regression on --firstboot and --firstlogin (LP: #268957)
  * Added postinst plugin to fix regression on --exec and add --copy (LP: #268955) 
  * Added man page.

  [ Soren Hansen ]
  * Include ubuntu-vm-builder package. (LP: #277272)
  * Read additional config file given by '-c'. (LP: #276813)
  * Fix regression from ubuntu-vm-builder: Make output from subprocess
    non-buffered.
  * Let --overwrite apply for libvirt as well. (LP: #276322)

 -- Soren Hansen <soren@ubuntu.com>  Fri, 03 Oct 2008 18:52:06 +0200

vm-builder (0.9-0ubuntu1) intrepid; urgency=low

  [Nicolas Barcet <nicolas.barcet@ubuntu.com>]
  * Fixed regression on --ip and friends (LP: #268920)
  * Added missing dependancy on dpkg-dev (LP: #270324)
  * Fixed regression on --part (LP: #268718)
  
 -- Soren Hansen <soren@ubuntu.com>  Wed, 24 Sep 2008 09:58:35 +0200

vm-builder (0.8.1-0ubuntu3) intrepid; urgency=low

  [Soren Hansen <soren@ubuntu.com>]
  * Re-add VMWare support. (LP: #268140) 
  * Fixed sources.list generation for Ubuntu. (LP: #268155)
  * Added configuration file handling. (LP: #268170)
  * Fix up Xen support (device and configuration file creation). (LP: #268142)

 -- Soren Hansen <soren@ubuntu.com>  Tue, 09 Sep 2008 17:01:02 +0200

vm-builder (0.8.1-0ubuntu2) intrepid; urgency=low
